k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sisbc-web
  namespace: sibs
  labels:
    app: sisbc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sisbc-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sisbc-web
    spec:
      containers:
        - name: sisbc-web
          image: 10.1.1.40:5000/sisbc-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
