k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: si-beaver-cloud
  namespace: sibs
  labels:
    app: si-beaver-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: si-beaver-cloud
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: si-beaver-cloud
    spec:
      containers:
        - name: si-beaver-cloud
          image: 10.1.1.40:5000/si-beaver-cloud:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7420
          volumeMounts:
            - name: app-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /healthz
              port: 7420
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 7420
            initialDelaySeconds: 8
            periodSeconds: 10
            failureThreshold: 8
      volumes:
        - name: app-data
          hostPath:
            path: /opt/sibs-data
            type: DirectoryOrCreate
