k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: sisbc-web
  namespace: sibs
spec:
  selector:
    app: sisbc-web
  ports:
    - port: 80
      targetPort: 80
