k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: si-beaver-cloud
  namespace: sibs
spec:
  selector:
    app: si-beaver-cloud
  ports:
    - port: 80
      targetPort: 7420
