k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: si-beaver-cloud
  namespace: sibs
spec:
  ingressClassName: traefik
  rules:
    - host: sibs.realhyx.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: si-beaver-cloud
                port:
                  number: 80
          - path: /mcp
            pathType: Prefix
            backend:
              service:
                name: si-beaver-cloud
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sisbc-web
                port:
                  number: 80
    - host: sibs.realhyx.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: si-beaver-cloud
                port:
                  number: 80
          - path: /mcp
            pathType: Prefix
            backend:
              service:
                name: si-beaver-cloud
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sisbc-web
                port:
                  number: 80
